# src/controllers/auth.controller.ts
@@ -22,7 +22,23 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password doesn't match"),
@@ -32,6 +48,10 @@ export default {
   async register(req: Request, res: Response) {
     /**
      #swagger.tags = ["Auth"]
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/RegisterRequest"},
+     }
      */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
@@ -71,7 +91,7 @@ export default {
      #swagger.requestBody = {
       required: true,
       schema: {$ref: "#/components/schemas/LoginRequest"},
-    }
+     }
      */
 
     const { identifier, password } = req.body as unknown as TLogin;
@@ -86,6 +106,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -138,6 +159,42 @@ export default {
       res.status(200).json({
         message: "Success get user data",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ["Auth"]
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/ActivationRequest"},
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+
+      res.status(200).json({
+        message: "Account activated successfully",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
